--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smilecenters</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Moons Centers</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Smilecenters</h1>
-    </header>
-    <main>
-        <div class="filters">
-            <select id="centerTypeFilter">
-                <option value="">All Center Types</option>
-            </select>
-            <select id="zoneFilter">
-                <option value="">All Zones</option>
-            </select>
-            <select id="servicesFilter">
-                <option value="">All Services</option>
-            </select>
-        </div>
-        <div id="smilecenters-container" class="container"></div>
-    </main>
-    <script src="script.js"></script>
+  <header>
+    <h1>Moons Centers</h1>
+    <div id="filters">
+      <label for="centerTypeFilter">Center Type:</label>
+      <select id="centerTypeFilter">
+        <option value="">All Center Types</option>
+      </select>
+
+      <label for="zoneFilter">Zone:</label>
+      <select id="zoneFilter">
+        <option value="">All Zones</option>
+      </select>
+
+      <label for="servicesFilter">Services:</label>
+      <select id="servicesFilter">
+        <option value="">All Services</option>
+      </select>
+    </div>
+  </header>
+
+  <main id="centersGrid"></main>
+
+  <script src="script.js"></script>
 </body>
 </html>
